# libusbmux

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile.am  README.md  bootstrap.sh  build.xml  configure.ac  usbmux.rc
inc/: tool_version.rc2  usbmux.h  version.h
lib/: libusbmux.lib
lib/inc/: usbmux.h
src/: Makefile.am  usbmux.c
